[package]
name = "infrahub-credential-helper"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "Git credential helper for Infrahub"
repository = "https://github.com/opsmill/infrahub-git-credential-helper"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
graphql_client = "0.16"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
ureq = { version = "3", features = ["json"] }

[profile.release]
strip = true
lto = true

[[bin]]
name = "infrahub-git-credential"
path = "src/bin/infrahub-git-credential.rs"

[[bin]]
name = "infrahub-git-askpass"
path = "src/bin/infrahub-git-askpass.rs"
